--- a/09_webpage/webpage.html
+++ b/09_webpage/webpage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fearless Year of Shadow</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">  
     <style>
         *{
             margin: 0;
@@ -17,14 +18,15 @@
             flex-direction: row;
             justify-content: center;
             align-items: center;
+            height: 100vh;
         }
 
-        .container{
-            background-color: antiquewhite;
-            margin-top: 100px;
-            height: 500px;
-            width: 1000px;
 
+        .container{
+            background-color: rgb(135, 130, 123);
+            height: 600px;
+            width: 1000px;
+            
         }
     </style>
 </head>
