--- a/09_webpage/webpage.html
+++ b/09_webpage/webpage.html
@@ -24,7 +24,7 @@
 
         .container-box{
           background-color: rgb(27, 35, 52);
-          height:auto;
+          height:100vh;
           width: 60vw;
           display: flex;
           margin-top: 10px;
@@ -49,6 +49,7 @@
           width: 100%;
           display: flex;
           justify-content: space-around;
+          background-color: rgb(27, 35, 52);
         }
 
         .carousel-container{
