--- a/09_webpage/webpage.html
+++ b/09_webpage/webpage.html
@@ -92,6 +92,7 @@
         display: flex;
         margin-top: 30px;
         justify-content: center;
+        text-align: center;
       
        }
     </style>
