Adjusted colors and spacing

--- a/09_webpage/webpage.html
+++ b/09_webpage/webpage.html
@@ -90,10 +90,10 @@
        .copyright{
         color: #c7bebe;
         display: flex;
-        margin-top: 30px;
+        padding-top: 10px;
         justify-content: center;
         text-align: center;
-      
+        background-color: rgb(27, 35, 52);
        }
     </style>
 </head>
