container height adjusted

--- a/09_webpage/webpage.html
+++ b/09_webpage/webpage.html
@@ -18,16 +18,16 @@
             flex-direction: row;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            height: 100%;
         }
 
 
         .container-box{
           background-color: rgb(27, 35, 52);
-          height:100vh;
+          height: 100%;
           width: 60vw;
           display: flex;
-          margin-top: 10px;
+          
           flex-direction: column;
           min-width: 390px;
         }
